<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget37"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
     >

        <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pressed_viberlabs_light"
                android:orientation="horizontal"

                >

            <EditText
                    android:id="@+id/name"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="80"
                    android:hint="@string/reminder_name_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    android:layout_gravity="bottom"
                    />
        </LinearLayout>

        <TextView
            android:id="@+id/due_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_reminder_due_date_label"
            android:textColor="#666"
            android:textSize="16sp"           
             />

        <EditText
            android:id="@+id/due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:textSize="16sp"             
            />

        <TextView
            android:id="@+id/due_time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_reminder_due_time_label"
            android:textColor="#666"
            android:textSize="16sp"             
            />

        <EditText
            android:id="@+id/due_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:textSize="16sp"
            android:text="@string/add_reminder_due_time"
            />

        <TextView
            android:id="@+id/notes_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_reminder_notes_label"
            android:textColor="#666"
            android:textSize="16sp"             
            />

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:inputType="textCapSentences"
            android:lines="3"
            android:singleLine="false"
            android:hint="Notes"
            android:textSize="16sp"
            />
</LinearLayout>